manifests/environments/tt02/apps/graphql/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
spec:
  template:
    spec:
      containers:
        - name: graphql
